# local-console-LLM

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  _typos.toml  conftest.py  inno-setup.iss  mypy.ini  sonar-project.properties
local-console/: Inno-Setup.LICENSE  pyproject.toml
local-console/src/local_console/: __main__.py  plugin.py
local-console/src/local_console/assets/broker/: config.no-tls.toml.tpl  config.tls.toml.tpl
local-console/src/local_console/assets/schemas/: classification.fbs  objectdetection.fbs  zonedetection.fbs
local-console/src/local_console/clients/: agent.py  trio_paho_mqtt.py
local-console/src/local_console/clients/command/: base_command.py  rpc.py  rpc_base.py  rpc_injector.py  rpc_with_response.py
local-console/src/local_console/commands/: broker.py  config.py  deploy.py  get.py  gui.py  logs.py  qr.py  rpc.py  server.py  utils.py
local-console/src/local_console/core/: camera.py  config.py  deploy_config.py  device_services.py  edge_apps.py  enums.py  firmware_validator.py  firmwares.py  helpers.py  models.py  notifications.py
local-console/src/local_console/core/camera/: _shared.py  ai_model.py  enums.py  firmware.py  flatbuffers.py  machine.py  mixin_mqtt.py  mixin_streaming.py  qr.py  schemas.py  state.py  state_guard.py  streaming.py
local-console/src/local_console/core/commands/: deploy.py  ota_deploy.py  rpc_with_response.py
local-console/src/local_console/core/deploy/: config_deployer.py  deployment_manager.py
local-console/src/local_console/core/error/: base.py  code.py
local-console/src/local_console/core/files/: device.py  exceptions.py  files.py  files_validators.py  inference.py  values.py
local-console/src/local_console/core/schemas/: edge_cloud_if_v1.py  schemas.py  utils.py
local-console/src/local_console/fastapi/: error_handler.py  exception_documentation.py  main.py  pagination.py
local-console/src/local_console/fastapi/dependencies/: commons.py  deploy.py  devices.py  notifications.py
local-console/src/local_console/fastapi/middleware/: log_all_requests.py
local-console/src/local_console/fastapi/routes/: commons.py  edge_apps.py  files.py  firmwares.py  models.py  provisioning.py  utils.py
local-console/src/local_console/gui/: config.py  device_manager.py  driver.py  enums.py  main.py  schemas.py
local-console/src/local_console/gui/assets/: config.ini
local-console/src/local_console/gui/controller/: ai_model_screen.py  applications_screen.py  base_controller.py  configuration_screen.py  connection_screen.py  devices_screen.py  firmware_screen.py  home_screen.py  inference_screen.py  streaming_screen.py
local-console/src/local_console/gui/drawer/: classification.py  drawer.py  objectdetection.py
local-console/src/local_console/gui/model/: ai_model_screen.py  applications_screen.py  base_model.py  camera_proxy.py  configuration_screen.py  connection_screen.py  data_binding.py  devices_screen.py  firmware_screen.py  home_screen.py  inference_screen.py  streaming_screen.py
local-console/src/local_console/gui/utils/: axis_mapping.py  enums.py  observer.py  qr.py  sync_async.py  validators.py
local-console/src/local_console/gui/view/: base_screen.py  screens.py
local-console/src/local_console/servers/: broker.py  webserver.py
local-console/src/local_console/utils/: enums.py  flatbuffers.py  fstools.py  fswatch.py  local_network.py  logger.py  schemas.py  signature.py  singleton.py  timing.py  tls.py  tracking.py  trio.py  validation.py
local-console/src/local_console/utils/validation/: aot.py  imx500.py  python_script.py  wasm.py
local-console/windows/: README.md  install.ps1  local_win_build.py  uninstall.ps1  utils.ps1
local-console/windows/steps/: app.ps1  desktopicon.ps1  firewall.ps1  sys.ps1
local-console/windows/steps/vcredist/: Get-InstalledSoftware.ps1  Get-InstalledVcRedist.ps1
mocked-device/: README.md  pyproject.toml
mocked-device/mocked_device/: device.py  main.py
mocked-device/mocked_device/mock/: base.py  topics.py
mocked-device/mocked_device/mock/deployment/: message.py
mocked-device/mocked_device/mock/deployment/app/: behavior.py  listener.py  value.py
mocked-device/mocked_device/mock/deployment/firmware/: behavior.py  listener.py  state_machine.py
mocked-device/mocked_device/mock/handshake/: behavior.py  listener.py
mocked-device/mocked_device/mock/rpc/: filter.py
mocked-device/mocked_device/mock/rpc/image/: behavior.py  listener.py
mocked-device/mocked_device/mock/rpc/streaming/: __init__.py  behavior.py  fake.py  listener.py  state_machine.py  values.py
mocked-device/mocked_device/mqtt/: connection.py  event.py  router.py
mocked-device/mocked_device/retry/: retrier.py
mocked-device/mocked_device/utils/: timeout.py
mocked-device/src/mocked_device/: __main__.py  command.py  device.py  message_base.py
mocked-device/src/mocked_device/listeners/: app.py  device_configuration_v2.py  firmware.py  handshake.py  image.py  model.py  reboot.py  streaming_v1.py  streaming_v2.py
mocked-device/src/mocked_device/mock_v1/: device_v1.py  fake.py  message.py  value.py
mocked-device/src/mocked_device/mock_v1/filters/: app.py  firmware.py  handshake.py  model.py  rpc.py
mocked-device/src/mocked_device/mock_v2/: ai_model_message.py  deployment_message.py  device_v2.py  ea_config.py  fake.py  message.py
mocked-device/src/mocked_device/mock_v2/filters/: app.py  (+6 more)
mocked-device/src/mocked_device/mqtt/: connection.py  event.py  router.py  values.py
mocked-device/src/mocked_device/retry/: retrier.py
mocked-device/src/mocked_device/utils/: data.py  fake.py  json.py  random.py  request.py  timeout.py  timing.py  topics.py
system-stub/: Makefile  README.md  env.conf  override.conf  pyproject.toml  requirements.txt  system-stub.service
system-stub/DEBIAN/: control  postinst  prerm
system-stub/src/system_stub/: __main__.py  camera.py  device_rpi.py  message.py
system-stub/src/system_stub/listeners/: model.py
system-stub/src/system_stub/state_machines/: model_machine.py
(+596 files in other folders)
