[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "local-console"
description = "Local Console for offline camera operation"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
  {name = "Console Experience team", email = "engineering@midokura.com"}
]
classifiers = [
  "Natural Language :: English",
  "Framework :: Trio",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.6.2.post1",
  "async-generator==1.10",
  "attrs==24.2.0",
  "certifi==2024.8.30",
  "cffi==1.17.1",
  "charset-normalizer==3.4.0",
  "click==8.1.7",
  "cryptography==42.0.8",
  "decorator==5.1.1",
  "docutils==0.21.2",
  "fastapi==0.112.0",
  "h11==0.14.0",
  "h2==4.1.0",
  "hpack==4.0.0",
  "httpcore==1.0.6",
  "httpx==0.27.0",
  "Hypercorn==0.17.3",
  "hyperframe==6.0.1",
  "idna==3.7",
  "importlib_metadata==7.1.0",
  "markdown-it-py==3.0.0",
  "materialyoucolor==2.0.9",
  "mdurl==0.1.2",
  "mypy-extensions==1.0.0",
  "numpy==2.1.2",
  "opencv-python==4.10.0.84",
  "outcome==1.3.0.post0",
  "packaging==24.0",
  "paho-mqtt==1.6.1",
  "pillow==10.4.0",
  "platformdirs==4.3.6",
  "priority==2.0.0",
  "psutil==5.9.8",
  "py==1.11.0",
  "pycparser==2.22",
  "pycryptodome==3.21.0",
  "pydantic==2.10.6",
  "pydantic_core==2.27.2",
  "Pygments==2.18.0",
  "pypng==0.20220715.0",
  "python-multipart==0.0.9",
  "qrcode==7.4.2",
  "requests==2.32.3",
  "retry==0.9.2",
  "rich==13.9.3",
  "shellingham==1.5.4",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "starlette==0.37.2",
  "trio==0.29.0",
  "trio-typing==0.10.0",
  "trio-util==0.8.0",
  "typer==0.12.5",
  "types-docutils==0.21.0.20241005",
  "types-paho-mqtt==1.6.0.20240321",
  "types-Pygments==2.18.0.20240506",
  "types-retry==0.9.9.4",
  "types-setuptools==69.5.0.20240522",
  "typing_extensions==4.12.2",
  "urllib3==2.0.7",
  "watchdog==4.0.2",
  "websockets==10.4",
  "wsproto==1.2.0",
  "zipp==3.20.1",
]

[project.urls]
# All options at https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
homepage = "https://github.com/SonySemiconductorSolutions/local-console"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools]
license-files = ["*LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

# Plugin architecture via entry points
[project.entry-points."local_console.plugin"]
base = "local_console.cli:PluginBase"
broker = "local_console.commands.broker:BrokerCommand"
config = "local_console.commands.config:ConfigCommand"
deploy = "local_console.commands.deploy:DeployCommand"
get = "local_console.commands.get:GetCommand"
logs = "local_console.commands.logs:LogsCommand"
qr = "local_console.commands.qr:QRCommand"
rpc = "local_console.commands.rpc:RPCCommand"
serve = "local_console.commands.server:ServerCommand"

[project.scripts]
local-console = "local_console.__main__:app"
