[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "mocked-device"
description = "Local Console for offline camera operation"
license = "Apache-2.0"
version = "0.0.0"
authors = [
  {name = "Console Experience team", email = "engineering@midokura.com"}
]
classifiers = [
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
  "annotated-types==0.7.0",
  "certifi==2024.8.30",
  "charset-normalizer==3.4.0",
  "idna==3.7",
  "paho-mqtt==1.6.1",
  "pillow==10.4.0",
  "pydantic==2.10.6",
  "pydantic_core==2.27.2",
  "requests==2.32.3",
  "typing-inspection==0.4.0",
  "typing_extensions==4.13.2",
  "urllib3==2.0.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mocked-device = "mocked_device.__main__:main"
